--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <runOrder>alphabetical</runOrder>
                     <childDelegation>true</childDelegation>
@@ -183,9 +183,33 @@
                         <exclude>**/CompiledPerformanceTests.java</exclude>
                         <exclude>**/MVELThreadTest.java</exclude>
                     </excludes>
+                    <systemPropertyVariables>
+                        <jacoco-agent.destfile>${project.build.directory}/jacoco.exec</jacoco-agent.destfile>
+                    </systemPropertyVariables>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
-
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.8.3</version>
+              <executions>
+                <execution>
+                  <id>instrument</id>
+                  <phase>process-test-classes</phase>
+                  <goals>
+                    <goal>instrument</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>restore-instrumented-classes</id>
+                  <phase>test</phase>
+                  <goals>
+                    <goal>restore-instrumented-classes</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -258,6 +282,14 @@
             <artifactId>xstream</artifactId>
             <version>1.3.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.agent</artifactId>
+            <version>0.8.3</version>
+            <scope>test</scope>
+            <classifier>runtime</classifier>
         </dependency>
 
     </dependencies>
